Unvisible text fix

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,5 +1,10 @@
 .mainContainer {
     height: 100%;
     overflow-x: hidden;
-	background-color: #212529;
+    background-color: #212529;
+    color: #fff;
+    h1,h2,h3,h4,h5{
+        color: grey;
+     
+    }
 }
